// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag href renders as an anchor 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  line-height: calc(24px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-0"
    href="#"
  />
</DocumentFragment>
`;

exports[`Flag renders a flag with a custom stylePreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  line-height: calc(24px - 2px * 2);
  color: #0A68C1;
  border-radius: 100vw;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-0:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Flag renders a flag with the default stylePreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  line-height: calc(24px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Flag renders in disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  line-height: calc(24px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-0"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Flag renders with Large size 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 40px;
  padding: 8px 12px;
  line-height: calc(40px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Flag renders with Small size 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  line-height: calc(24px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Flag renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  line-height: calc(24px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;
